@@ -3,6 +3,11 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+10/18/24: Made multigrid run selections be retained if dialog closed and
+reopened.
+
+10/18/24: Started saving states to be set in Navigator file.
+
 10/17/24: SEM_4-2-0beta11
 10/17/24: Added script commands to report and set file saving options.
 
